[package]
name = "activitypub"
description = "ActivityPub in Rust"
version = "0.1.1"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitypub"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-derive = "0.1"
activitystreams-traits = "0.1"
activitystreams-types = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
failure = "0.1"
