[package]
name = "activitypub"
description = "ActivityPub in Rust"
version = "0.1.2"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/activitypub"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]

[dependencies]
activitystreams-derive = { version = "0.1", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
activitystreams-traits = { version = "0.1", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
activitystreams-types = { version = "0.2", git = "https://git.asonix.cloud/asonix/activitystreams.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
failure = "0.1"
